--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "cSpell.words": ["akey", "alist", "curr", "ispalin", "ispalindrome", "llist"],
-  "python.formatting.provider": "yapf"
+  "python.formatting.provider": "autopep8"
 }
