--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pytest = "^7.1.1"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.1.0", allow-prereleases = true}
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
