--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
-  "cSpell.words": ["akey", "alist", "curr", "ispalin", "ispalindrome", "llist"],
+  "cSpell.words": [
+    "akey",
+    "alist",
+    "curr",
+    "ispalin",
+    "ispalindrome",
+    "llist",
+    "vals"
+  ],
   "python.formatting.provider": "autopep8"
 }
