--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["SARAH AHMAD HUDAIB <SARAHHUDAIB@YAHOO.COM>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pytest = "^7.1.1"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^22.1.0", allow-prereleases = true}
